Fix vertical center alignment on homepage

--- a/static/style.css
+++ b/static/style.css
@@ -1,5 +1,9 @@
-body {
-    display: block;
+body.home .wrapper {
+    justify-content: space-between;
+}
+
+body.home .content {
+    flex: none;
 }
 
 h1.home-author {
